feat: update dependency